# jinchanchan-assistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
config/: config.example.yaml
core/: __init__.py  action.py  action_queue.py  capabilities.py  coordinate_scaler.py  game_state.py  protocols.py
core/control/: __init__.py  action_executor.py
core/geometry/: __init__.py  transform.py
core/llm/: __init__.py  client.py  parser.py  prompts.py
core/rules/: __init__.py  decision_engine.py  quick_actions.py  validator.py
core/ui/: screenshot_renderer.py
core/vision/: __init__.py  ocr_engine.py  recognition_engine.py  regions.py  som_annotator.py  template_manager.py  template_matcher.py  template_registry.py
docs/: architecture.md  feature_parity.md  parity_audit.md
docs/runbooks/: build_release.md  product_acceptance.md  real_environment.md  release.md  smoke_mac_windows.md
resources/game_data/: heroes.json  items.json  synergies.json
resources/templates/: registry.json  s13_mapping.json
scripts/: build_mac.sh  build_win.ps1  smoke_dist_mac.sh  smoke_dist_win.ps1
tests/: manual_gemini_smoke.py  test_action.py  test_coordinate_scaler.py  test_coordinate_transform.py  test_debug_ui.py  test_gemini.py  test_llm_guard.py  test_main_wiring.py  test_offline_replay.py  test_recognition.py  test_rules.py  test_smoke_e2e.py
tests/fixtures/: generate_fixtures.py
